# klosures

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: closures.rs  meta_badges.rs
